# Qt_Apps

./: .gitignore
36_2/: CMakeLists.txt  main.cpp
ButtonChangeColor/: CMakeLists.txt  main.cpp
Calculator/: CMakeLists.txt  MainMenu.h  MainMenu.ui  main.cpp  menu.cpp
Phone/: CMakeLists.txt  CallerMainWindow.h  MainWindow.ui  main.cpp
